[package]
name = "fast_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
voyager = { path = "voyager" }
regex = { version = "1.10.4" }
reqwest = { version = "0.11", default-features = false }
futures = "0.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
